@@ -17,10 +17,8 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -29,100 +27,69 @@ public class RoutingService {
     private final CustomerRepository customerRepository;
     private final GeocodingService geocodingService;
 
-public static int totalUsers;
-public static int totalEnabledUsers;
+    public static int totalUsers;
+    public static int totalEnabledUsers;
 
-    public RouteResponse createRoute4OneDriver(int pageNumber, Optional<String> county) throws IOException, InterruptedException, ApiException {
+    public RouteResponse createRoute4OneDriver(int pageNumber, Optional<String> county) {
         GeoApiContext context = geocodingService.getContext();
-//     search for enabled users in the database and create a list of those users first
-       Page<Customer> enabledUsers = null;
-        // Step 2: Fetch all customer addresses from the customer repository
-      //  var users = customerRepository.findAll(PageRequest.of(pageNumber - 1, 25));
-        Page<Customer>allUsers=null;
-if(county.isPresent()){
-    enabledUsers = customerRepository.findEnabledCustomersByCounty(PageRequest.of(pageNumber - 1, 25), county.get());
-    totalUsers = (int) customerRepository.countByCounty(county.get());  // Update totalUsers with the total count of users
-    log.info("totalUsers: " + totalUsers);
-    totalEnabledUsers = (int) enabledUsers.getTotalElements();  // Update totalEnabledUsers with the total count of enabled users
-    // Step 3: Create a list of LatLng objects from the customer addresses
-    log.info("enabledUsersCount: " + totalEnabledUsers);
-}else{
-    allUsers = customerRepository.findAll(PageRequest.of(pageNumber - 1, 25));
-    totalUsers = (int) customerRepository.count();
-    totalEnabledUsers = (int) customerRepository.count();
-}
-    // Step 3: Create a list of CustomerRouteDetailsDTO objects from the customer addresses
-    List<CustomerRouteDetailsDTO> customerRouteDetails = allUsers == null? enabledUsers.stream().map(user -> {
-                CustomerRouteInfoDTO customerInfo = user.toCustomerRouteInfoDTO();
-                LatLng location = new LatLng(customerInfo.getLatitude(), customerInfo.getLongitude());
-                return CustomerRouteDetailsDTO.builder()
-                        .customerInfo(customerInfo)
-                        .location(location)
-                        .build();
-            })
-            .toList() : allUsers.stream().map(user -> {
-                CustomerRouteInfoDTO customerInfo = user.toCustomerRouteInfoDTO();
-                LatLng location = new LatLng(customerInfo.getLatitude(), customerInfo.getLongitude());
-                return CustomerRouteDetailsDTO.builder()
-                        .customerInfo(customerInfo)
-                        .location(location)
-                        .build();
-            }).toList();
-
-// Now extract LatLng objects from the CustomerRouteDetailsDTO list for further processing
+        CustomerRouteInfoDTO nngcAdminInfo = fetchNNGCAdminInfo();
+        LatLng nngcAdminLocation = new LatLng(nngcAdminInfo.getLatitude(), nngcAdminInfo.getLongitude());
+        Page<Customer> customers = fetchCustomers(pageNumber, county);
+        List<CustomerRouteDetailsDTO> customerRouteDetails = createCustomerRouteDetails(customers);
+        customerRouteDetails.sort(Comparator.comparing(dto -> distanceBetween(nngcAdminLocation, dto.getLocation())));
         List<LatLng> latLngs = customerRouteDetails.stream()
                 .map(CustomerRouteDetailsDTO::getLocation)
-                .toList();
+                .collect(Collectors.toList());
+        LatLng[] waypoints = latLngs.toArray(new LatLng[0]);
+        checkCustomersExist(latLngs);
+        DirectionsRoute route = createDirectionsRoute(context, nngcAdminLocation, waypoints);
+        return getRouteResponse(route, customerRouteDetails);
+    }
 
-// Now extract LatLng objects from the CustomerRouteInfo list
+    private CustomerRouteInfoDTO fetchNNGCAdminInfo() {
+        return customerRepository.findById(273L)
+                .orElseThrow(() -> new RuntimeException("NNGC_ADMIN not found"))
+                .toCustomerRouteInfoDTO();
+    }
 
+    private Page<Customer> fetchCustomers(int pageNumber, Optional<String> county) {
+        return county.map(c -> customerRepository.findEnabledCustomersByCounty(PageRequest.of(pageNumber - 1, 25), c))
+                .orElseGet(() -> customerRepository.findAll(PageRequest.of(pageNumber - 1, 25)));
+    }
 
-// Steps 4-5: Set the first address as the origin, the last address as the destination, and the remaining addresses as waypoints
-        LatLng origin;
-        LatLng destination;
-        LatLng[] waypoints;
-        if(latLngs.size() >1){
-            origin = latLngs.get(0);
-            destination = latLngs.get(latLngs.size() - 1);
-            waypoints = latLngs.subList(1, latLngs.size() - 1).toArray(new LatLng[0]);
-        } else if (latLngs.size() == 1){
-            origin = latLngs.get(0);
-            destination = latLngs.get(0);
-            waypoints = new LatLng[0];
-        }else{
+    private List<CustomerRouteDetailsDTO> createCustomerRouteDetails(Page<Customer> customers) {
+        return customers.stream()
+                .map(Customer::toCustomerRouteInfoDTO)
+                .map(info -> CustomerRouteDetailsDTO.builder()
+                        .customerInfo(info)
+                        .location(new LatLng(info.getLatitude(), info.getLongitude()))
+                        .build())
+                .collect(Collectors.toList());
+    }
+
+    private void checkCustomersExist(List<LatLng> latLngs) {
+        if (latLngs.isEmpty()) {
             throw new RuntimeException("No customers found in the county");
         }
-       // = latLngs.subList(1, latLngs.size() - 1).toArray(new LatLng[0]);
-        log.info(latLngs.toString());
+    }
 
-
-        DirectionsRoute route = null;
+    private DirectionsRoute createDirectionsRoute(GeoApiContext context, LatLng nngcAdminLocation, LatLng[] waypoints) {
         try {
-            // Step 6-7: Create a new Directions API request with the origin, destination, waypoints, and optimize the waypoints
             DirectionsResult result = DirectionsApi.newRequest(context)
-                    .origin(origin)
-                    .destination(destination)
+                    .origin(nngcAdminLocation)
+                    .destination(nngcAdminLocation)
                     .waypoints(waypoints)
                     .optimizeWaypoints(true)
                     .mode(TravelMode.DRIVING)
                     .departureTimeNow()
-                    .origin("37.968418,-76.4839841")
-                              .await();
-
-            // Step 8-9: Handle the response and print the route information
-            if (result != null && result.routes != null && result.routes.length > 0) {
-                route = result.routes[0];
-                log.info("Total distance: " + route.legs[0].distance);
-                log.info("Total duration: " + route.legs[0].duration);
-                log.info("Route polyline: " + route.overviewPolyline);
-            }
+                    .await();
+            return Optional.ofNullable(result)
+                    .map(r -> r.routes[0])
+                    .orElse(null);
         } catch (ApiException | InterruptedException | IOException e) {
-            // Handle exceptions
             log.info("Error creating route for driver" + e.getMessage());
+            return null;
         }
-
-        return getRouteResponse(route, customerRouteDetails);
-
     }
 
     @NotNull
@@ -131,16 +98,20 @@ if(county.isPresent()){
             int totalDistance = 0;
             int totalDuration = 0;
             int totalStops = route.legs.length - 1;
-            List<String> instructions = new ArrayList<>();
+            List<InstructionWithCustomerId> instructions = new ArrayList<>();
 
             for (DirectionsLeg leg : route.legs) {
                 for (DirectionsStep step : leg.steps) {
-                    instructions.add(step.htmlInstructions);
+                    InstructionWithCustomerId instructionWithCustomerId = new InstructionWithCustomerId();
+                    instructionWithCustomerId.setInstruction(step.htmlInstructions);
+                    instructionWithCustomerId.setCustomerInfo(customerRouteDetails.get(0).getCustomerInfo());
+
+                    instructions.add(instructionWithCustomerId);
                     totalDistance += (int) leg.distance.inMeters;
                     totalDuration += (int) leg.duration.inSeconds;
                 }
             }
-
+            log.info(instructions.toString());
             return RouteResponse.builder()
                     .polyline(route.overviewPolyline.getEncodedPath())
                     .routeDistance(String.valueOf(totalDistance/1609.344 ))
@@ -148,12 +119,29 @@ if(county.isPresent()){
                     .totalStops(totalStops)
                     .instructions(instructions)
                     .customerRouteDetails(customerRouteDetails)
-                    .totalCustomers(totalUsers)
                     .build();
         }
 
         // Return an empty RouteResponse object or null, as per your use case, if route is null
         return RouteResponse.builder().build();
     }
-}
 
+    private double distanceBetween(LatLng point1, LatLng point2) {
+        double lat1 = point1.lat;
+        double lon1 = point1.lng;
+        double lat2 = point2.lat;
+        double lon2 = point2.lng;
+
+        // Calculate the distance between the two points based on the Haversine formula
+        double earthRadius = 6371; // Radius of the earth in km
+        double dLat = Math.toRadians(lat2 - lat1);
+        double dLon = Math.toRadians(lon2 - lon1);
+        double a = Math.sin(dLat / 2) * Math.sin(dLat / 2) +
+                Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2)) *
+                        Math.sin(dLon / 2) * Math.sin(dLon / 2);
+        double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+        double distance = earthRadius * c; // Distance in km
+
+        return distance;
+    }
+}
